test/modules/diten/main-module-flag/main_with_formals.good
error: Ambiguous main() function:
main_with_formals.chpl:7: note: in module main_with_formals
main_with_formals.chpl:11: note: in module main_with_formals
